--- a/index.html
+++ b/index.html
@@ -1121,12 +1121,12 @@
                                                     <div class="tab-content-wrap clearfix">
                                                         <div class="tab-content">
                                                             <div class="item-content">                                                            
-                                                                <p>Our focus is to exceed your goals, meet your timelines and successfully manage your budget. We provide our clients with top-notch general contracting, construction management, site surveys and design build services.</p>
+                                                                <p>Our focus is to Built on a strong foundation in architecture, construction engineering, and management, we integrate planning, execution, and project controls to deliver high-quality outcomes on time and within budget. Our work is guided by BIM-enabled coordination, Lean construction principles, and disciplined project controls, ensuring clarity, efficiency, and value throughout the project lifecycle.</p>
                                                                 <div class="themesflat-list has-icon style-1 icon-left ofset-padding-32 clearfix">
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We have successfully completed projects in numerous states.</span>
+                                                                            <span class="text">We have Integrated design-build & development expertise.</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->
@@ -1134,7 +1134,7 @@
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We is licensed to perform general contracting work in most states. </span>
+                                                                            <span class="text">Technology-driven project delivery is what we offer</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->
@@ -1142,20 +1142,21 @@
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We will be open to obtaining new licensing if an opportunity arises</span>
+                                                                            <span class="text">We are Transparent and client-centered</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->                                                        
                                                             </div>
                                                         </div><!-- /.tab-content -->
+                                                        <div class="tab-content-wrap clearfix">
                                                         <div class="tab-content">
                                                             <div class="item-content">                                                            
-                                                                <p>Our focus is to exceed your goals, meet your timelines and successfully manage your budget. We provide our clients with top-notch general contracting, construction management, site surveys and design build services.</p>
+                                                                <p>Our focus is to Built on a strong foundation in architecture, construction engineering, and management, we integrate planning, execution, and project controls to deliver high-quality outcomes on time and within budget. Our work is guided by BIM-enabled coordination, Lean construction principles, and disciplined project controls, ensuring clarity, efficiency, and value throughout the project lifecycle.</p>
                                                                 <div class="themesflat-list has-icon style-1 icon-left ofset-padding-32 clearfix">
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We have successfully completed projects in numerous states.</span>
+                                                                            <span class="text">We have Integrated design-build & development expertise.</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->
@@ -1163,7 +1164,7 @@
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We is licensed to perform general contracting work in most states. </span>
+                                                                            <span class="text">Technology-driven project delivery is what we offer</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->
@@ -1171,20 +1172,21 @@
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We will be open to obtaining new licensing if an opportunity arises</span>
+                                                                            <span class="text">We are Transparent and client-centered</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->                                                        
                                                             </div>
                                                         </div><!-- /.tab-content -->
+                                                        <div class="tab-content-wrap clearfix">
                                                         <div class="tab-content">
                                                             <div class="item-content">                                                            
-                                                                <p>Our focus is to exceed your goals, meet your timelines and successfully manage your budget. We provide our clients with top-notch general contracting, construction management, site surveys and design build services.</p>
+                                                                <p>Our focus is to Built on a strong foundation in architecture, construction engineering, and management, we integrate planning, execution, and project controls to deliver high-quality outcomes on time and within budget. Our work is guided by BIM-enabled coordination, Lean construction principles, and disciplined project controls, ensuring clarity, efficiency, and value throughout the project lifecycle.</p>
                                                                 <div class="themesflat-list has-icon style-1 icon-left ofset-padding-32 clearfix">
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We have successfully completed projects in numerous states.</span>
+                                                                            <span class="text">We have Integrated design-build & development expertise.</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->
@@ -1192,7 +1194,7 @@
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We is licensed to perform general contracting work in most states. </span>
+                                                                            <span class="text">Technology-driven project delivery is what we offer</span>
                                                                         </span>
                                                                     </div>
                                                                 </div><!-- /.themeslat-list -->
@@ -1200,9 +1202,12 @@
                                                                     <div class="inner">
                                                                         <span class="item">
                                                                             <span class="icon"><i class="fa fa-check-square"></i></span>
-                                                                            <span class="text">We will be open to obtaining new licensing if an opportunity arises</span>
+                                                                            <span class="text">We are Transparent and client-centered</span>
                                                                         </span>
                                                                     </div>
+                                                                </div><!-- /.themeslat-list -->                                                        
+                                                            </div>
+                                                        </div><!-- /.tab-content -->
                                                                 </div><!-- /.themeslat-list -->                                                        
                                                             </div>
                                                         </div><!-- /.tab-content -->
