--- a/index.html
+++ b/index.html
@@ -1221,21 +1221,21 @@
                                                 <div class="themesflat-spacer clearfix" data-desktop="38" data-mobile="35" data-smobile="35"></div>
                                                 <div class="themesflat-accordions style-1 has-icon icon-left iconstyle-1 clearfix">
                                                     <div class="accordion-item active">
-                                                        <h3 class="accordion-heading"><span class="inner">Are there any hosting companies you recommend?</span></h3>
+                                                        <h3 class="accordion-heading"><span class="inner">Who is HB (Hafarb) BuildWorks?</span></h3>
                                                         <div class="accordion-content">
-                                                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</div>
+                                                            <div>HB (Hafarb) BuildWorks is a Chicago-based design-build, construction management, and real estate development firm delivering projects that balance design excellence, construction efficiency, and long-term asset value.</div>
                                                         </div>
                                                     </div><!-- /.accordion-item -->
                                                     <div class="accordion-item">
-                                                        <h3 class="accordion-heading"><span class="inner">We use technology to do the job more quickly</span></h3>
+                                                        <h3 class="accordion-heading"><span class="inner">How do you operate</span></h3>
                                                         <div class="accordion-content">
-                                                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</div>
+                                                            <div>We Operate Built on a strong foundation in architecture, construction engineering, and management, we integrate planning, execution, and project controls to deliver high-quality outcomes on time and within budget. Our work is guided by BIM-enabled coordination, Lean construction principles, and disciplined project controls, ensuring clarity, efficiency, and value throughout the project lifecycle.</div>
                                                         </div>
                                                     </div><!-- /.accordion-item -->
                                                     <div class="accordion-item ">
-                                                        <h3 class="accordion-heading"><span class="inner">Employees are continually trained on safety issues</span></h3>
+                                                        <h3 class="accordion-heading"><span class="inner">What do we bring to the table</span></h3>
                                                         <div class="accordion-content">
-                                                            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</div>
+                                                            <div>Beyond construction delivery, HB (Hafarb) BuildWorks brings a development-focused mindset, supporting feasibility analysis, cost modeling, and owner representation to help clients and investors make informed, value-driven decisions.</div>
                                                         </div>
                                                     </div><!-- /.accordion-item -->
                                                 </div><!-- /.themesflat-accordion -->
