--- a/index.html
+++ b/index.html
@@ -1380,27 +1380,27 @@
                                      HB (Hafarb) BuildWorks
                                 </p>
 
-                                <p class="margin-bottom-15">We have over 15 years of experien able to help you 24 hours a day.</p>
+                                <p class="margin-bottom-15">HB (Hafarb) BuildWorks has over 14 years of experience in architecture, design-build, and construction delivery.</p>
 
                                 <ul>
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-map-marker"></span>
-                                            <span class="text">PO BOX 16122 COLLINS STREET <span class="sl">West Victoria, NewYork</span></span>
+                                            <span class="text">The firm operates through HB BuildingWorks Inc. (USA) <span class="sl">Chicago</span></span>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-phone"></span>
-                                            <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                            <span class="text">CALL US : +1 (773)901-0254</span>
                                         </div>
                                     </li>
 
                                     <li class="margin-top-7">
                                         <div class="inner">
                                             <span class=" font-size-14 fa fa-envelope"></span>
-                                            <span class="text">SUPPORT@NICHE_THEME</span>
+                                            <span class="text">hbworks.ng@gmail.com</span>
                                         </div>
                                     </li>
                                 </ul>
