--- a/index.html
+++ b/index.html
@@ -1541,11 +1541,11 @@
             <div id="bottom-bar-inner" class="container">
                 <div class="bottom-bar-inner-wrap">
                     <div class="bottom-bar-content">
-                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Templates Hub</a></span> 
+                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Lotus-Gold</a></span> 
                         </div>
                     </div><!-- /.bottom-bar-content -->
 
-                    <div class="bottom-bar-menu">
+                    <!-- <div class="bottom-bar-menu">
                         <ul class="bottom-nav">
                             <li class="menu-item current-menu-item">
                                 <a href="index.html">HOME</a>
@@ -1569,7 +1569,7 @@
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
                         </ul>
-                    </div><!-- /.bottom-bar-menu -->
+                    </div>/.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
         </div><!-- /#bottom -->
