--- a/page-testimonial.html
+++ b/page-testimonial.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="header-fixed page no-sidebar header-style-2 topbar-style-1 menu-has-search">
+<body class="header-fixed page no-sidebar header-style-2 topbar-style-2 menu-has-search">
 
 <div id="wrapper" class="animsition">
     <div id="page" class="clearfix">
@@ -72,7 +72,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
@@ -83,10 +83,10 @@
 
                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
-                                <li class="menu-item menu-item-has-children">
+                                <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
-                                        <!-- <li class="menu-item"><a href="index.html">HOME 1</a></li> -->
+                                        <!-- <li class="menu-item current-item"><a href="index.html">HOME 1</a></li> -->
                                         <li class="menu-item"><a href="home-2.html">HOME</a></li>
                                     </ul>
                                 </li>
