--- a/page-about.html
+++ b/page-about.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="header-fixed page no-sidebar header-style-2 topbar-style-1 menu-has-search">
+<body class="header-fixed page no-sidebar header-style-2 topbar-style-2 menu-has-search">
 
 <div id="wrapper" class="animsition">
     <div id="page" class="clearfix">
@@ -42,11 +42,11 @@
                 <div id="top-bar-inner" class="container">
                     <div class="top-bar-inner-wrap">
                         <div class="top-bar-content">
-                           <div class="inner">
+                            <div class="inner">
                                 <span class="address content">HB BuildingWorks Inc. (USA)</span>
                                 <span class="phone content">+1 (773)901-0254</span>
                                 <span class="time content">Mon-Sat: 8am - 6pm</span>
-                            </div>                               
+                            </div>                              
                         </div><!-- /.top-bar-content -->
 
                         <div class="top-bar-socials">
@@ -71,7 +71,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
@@ -82,17 +82,17 @@
 
                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
-                                <li class="menu-item menu-item-has-children">
+                                <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
-                                        <!-- <li class="menu-item"><a href="index.html">HOME 1</a></li> -->
+                                        <!-- <li class="menu-item current-item"><a href="index.html">HOME 1</a></li> -->
                                         <li class="menu-item"><a href="home-2.html">HOME</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children current-menu-item">
+                                <li class="menu-item menu-item-has-children">
                                     <a href="page-about.html">ABOUT US </a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item current-item"><a href="page-about.html">ABOUT US</a></li>
+                                        <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
                                         <!-- <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
                                         <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
@@ -105,7 +105,7 @@
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children">
+                               <li class="menu-item menu-item-has-children">
                                     <a href="page-projects.html">PROJECTS</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li>
