--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-   <title>HB(Hafarb BuildWorks)</title>
+    <title>HB(Hafarb BuildWorks)</title>
 
     <meta name="author" content="themesflat.com">
 
@@ -32,7 +32,7 @@
 
 </head>
 
-<body class="header-fixed page sidebar-left header-style-2 topbar-style-1 menu-has-search">
+<body class="header-fixed page no-sidebar header-style-2 topbar-style-2 menu-has-search">
 
 <div id="wrapper" class="animsition">
     <div id="page" class="clearfix">
@@ -47,7 +47,7 @@
                                 <span class="address content">HB BuildingWorks Inc. (USA)</span>
                                 <span class="phone content">+1 (773)901-0254</span>
                                 <span class="time content">Mon-Sat: 8am - 6pm</span>
-                            </div>                               
+                            </div>                              
                         </div><!-- /.top-bar-content -->
 
                         <div class="top-bar-socials">
@@ -72,7 +72,7 @@
                         <div id="site-logo" class="clearfix">
                             <div id="site-log-inner">
                                 <a href="index.html" rel="home" class="main-logo">
-                                    <img src="assets/img/logo-small.png" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
+                                    <img src="" alt="HB(Hafarb) BuildWorks" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39">
                                 </a>
                             </div>
                         </div><!-- /#site-logo -->
@@ -83,11 +83,11 @@
 
                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
-                                <li class="menu-item menu-item-has-children">
+                                <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
-                                        <!-- <li class="menu-item"><a href="index.html">HOME 1</a></li> -->
-                                        <li class="menu-item"><a href="home-2.html">HOME 2</a></li>
+                                        <!-- <li class="menu-item current-item"><a href="index.html">HOME 1</a></li> -->
+                                        <li class="menu-item"><a href="home-2.html">HOME</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
@@ -99,11 +99,11 @@
                                         <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children current-menu-item">
+                                <li class="menu-item menu-item-has-children">
                                     <a href="page-services.html">SERVICES</a>
                                     <ul class="sub-menu">
                                         <!-- <li class="menu-item"><a href="page-services.html">SERVICES</a></li> -->
-                                        <li class="menu-item current-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
+                                        <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
                                     </ul>
                                 </li>
                                <li class="menu-item menu-item-has-children">
