--- a/page-project-detail.html
+++ b/page-project-detail.html
@@ -87,7 +87,7 @@
                                     <a href="index.html">HOME</a>
                                     <ul class="sub-menu">
                                         <!-- <li class="menu-item"><a href="index.html">HOME 1</a></li> -->
-                                        <li class="menu-item"><a href="home-2.html">HOME</a></li>
+                                        <!-- <li class="menu-item"><a href="home-2.html">HOME</a></li> -->
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
