--- a/page-about.html
+++ b/page-about.html
@@ -930,30 +930,31 @@
                         <div class="widget widget_text">
                             <div class="textwidget">
                                 <p>
-                                    <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34">
+                                    <!-- <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34"> -->
+                                     HB (Hafarb) BuildWorks
                                 </p>
 
-                                <p class="margin-bottom-15">We have over 15 years of experien able to help you 24 hours a day.</p>
+                                <p class="margin-bottom-15">HB (Hafarb) BuildWorks has over 14 years of experience in architecture, design-build, and construction delivery.</p>
 
                                 <ul>
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-map-marker"></span>
-                                            <span class="text">PO BOX 16122 COLLINS STREET <span class="sl">West Victoria, NewYork</span></span>
+                                            <span class="text">The firm operates through HB BuildingWorks Inc. (USA) <span class="sl">Chicago</span></span>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-phone"></span>
-                                            <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                            <span class="text">CALL US : +1 (773)901-0254</span>
                                         </div>
                                     </li>
 
                                     <li class="margin-top-7">
                                         <div class="inner">
                                             <span class=" font-size-14 fa fa-envelope"></span>
-                                            <span class="text">SUPPORT@NICHE_THEME</span>
+                                            <span class="text">hbworks.ng@gmail.com</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -1094,16 +1095,16 @@
             <div id="bottom-bar-inner" class="container">
                 <div class="bottom-bar-inner-wrap">
                     <div class="bottom-bar-content">
-                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Templates Hub</a></span> 
+                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Lotus-Gold</a></span> 
                         </div>
                     </div><!-- /.bottom-bar-content -->
 
-                    <div class="bottom-bar-menu">
+                    <!-- <div class="bottom-bar-menu">
                         <ul class="bottom-nav">
-                            <li class="menu-item">
+                            <li class="menu-item current-menu-item">
                                 <a href="index.html">HOME</a>
                             </li>
-                            <li class="menu-item current-menu-item">
+                            <li class="menu-item">
                                 <a href="page-about-2.html">ABOUT US</a>
                             </li>
                             <li class="menu-item">
@@ -1115,14 +1116,14 @@
                             <li class="menu-item">
                                 <a href="page-testimonial.html">PAGE</a>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item ">
                                 <a href="page-blog.html">BLOG</a>
                             </li>
                             <li class="menu-item">
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
                         </ul>
-                    </div><!-- /.bottom-bar-menu -->
+                    </div>/.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
         </div><!-- /#bottom -->
