--- a/page-contact.html
+++ b/page-contact.html
@@ -92,7 +92,7 @@
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-about.html">ABOUT US </a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
+                                        <!-- <li class="menu-item"><a href="page-about.html">ABOUT US</a></li> -->
                                         <!-- <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
                                         <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
@@ -102,13 +102,13 @@
                                     <a href="page-services.html">SERVICES</a>
                                     <ul class="sub-menu">
                                         <!-- <li class="menu-item"><a href="page-services.html">SERVICES</a></li> -->
-                                        <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
+                                        <!-- <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li> -->
                                     </ul>
                                 </li>
                                <li class="menu-item menu-item-has-children">
                                     <a href="page-projects.html">PROJECTS</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li>
+                                        <!-- <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li> -->
                                         <!-- <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
                                         <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li> -->
                                     </ul>
@@ -116,7 +116,7 @@
                                 <li class="menu-item menu-item-has-children" >
                                     <a href="page-testimonial.html">PAGE</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="page-testimonial.html">PAGE TESTIMONIAL</a></li>
+                                        <!-- <li class="menu-item"><a href="page-testimonial.html">PAGE TESTIMONIAL</a></li> -->
                                         <!-- <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li> -->
                                     </ul>
                                 </li>
@@ -130,7 +130,7 @@
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-contact.html">CONTACT</a>
                                     <ul class="sub-menu right-sub-menu">
-                                        <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li>
+                                        <!-- <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li> -->
                                         <!-- <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li> -->
                                     </ul>
                                 </li>
