--- a/page-projects.html
+++ b/page-projects.html
@@ -328,7 +328,7 @@
             </div><!-- /#content-wrap -->
         </div><!-- /#main-content -->
 
-        <!-- Footer -->
+       <!-- Footer -->
         <footer id="footer" class="clearfix">
             <div id="footer-widgets" class="container">
                 <div class="themesflat-row gutter-30">
@@ -505,7 +505,7 @@
                     </div><!-- /.bottom-bar-content -->
 
                     <div class="bottom-bar-menu">
-                        <ul class="bottom-nav">
+                        <!-- <ul class="bottom-nav">
                             <li class="menu-item">
                                 <a href="index.html">HOME</a>
                             </li>
@@ -527,7 +527,7 @@
                             <li class="menu-item">
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div><!-- /.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
