--- a/page-projects.html
+++ b/page-projects.html
@@ -81,45 +81,45 @@
                             <span></span>
                         </div><!-- /.mobile-button -->
 
-                        <nav id="main-nav" class="main-nav">
+                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
                                 <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
-                                    <ul class="sub-menu">
-                                        <!-- <li class="menu-item current-item"><a href="index.html">HOME 1</a></li> -->
+                                    <!-- <ul class="sub-menu">
+                                        <li class="menu-item current-item"><a href="index.html">HOME 1</a></li>
                                         <li class="menu-item"><a href="home-2.html">HOME</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-about.html">ABOUT US </a>
-                                    <ul class="sub-menu">
+                                    <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
-                                        <!-- <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
+                                        <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
-                                        <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li>
+                                    </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-services.html">SERVICES</a>
-                                    <ul class="sub-menu">
-                                        <!-- <li class="menu-item"><a href="page-services.html">SERVICES</a></li> -->
+                                    <!-- <ul class="sub-menu">
+                                        <li class="menu-item"><a href="page-services.html">SERVICES</a></li>
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                <li class="menu-item menu-item-has-children">
                                     <a href="page-projects.html">PROJECTS</a>
-                                    <ul class="sub-menu">
+                                    <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li>
-                                        <!-- <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
-                                        <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
+                                        <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li>
+                                    </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children" >
                                     <a href="page-testimonial.html">PAGE</a>
-                                    <ul class="sub-menu">
+                                    <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-testimonial.html">PAGE TESTIMONIAL</a></li>
-                                        <!-- <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li>
+                                    </ul> -->
                                 </li>
                                 <!-- <li class="menu-item menu-item-has-children">
                                     <a href="page-blog.html">BLOG</a>
@@ -130,14 +130,13 @@
                                 </li> -->
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-contact.html">CONTACT</a>
-                                    <ul class="sub-menu right-sub-menu">
+                                    <!-- <ul class="sub-menu right-sub-menu">
                                         <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li>
-                                        <!-- <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li>
+                                    </ul> -->
                                 </li>
                             </ul>
                         </nav><!-- /#main-nav -->
-
                         <div id="header-search">
                             <a href="#" class="header-search-icon">
                                 <span class="search-icon fa fa-search">
@@ -328,7 +327,7 @@
             </div><!-- /#content-wrap -->
         </div><!-- /#main-content -->
 
-       <!-- Footer -->
+        <!-- Footer -->
         <footer id="footer" class="clearfix">
             <div id="footer-widgets" class="container">
                 <div class="themesflat-row gutter-30">
@@ -336,30 +335,31 @@
                         <div class="widget widget_text">
                             <div class="textwidget">
                                 <p>
-                                    <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34">
+                                    <!-- <img src="assets/img/logo-white%402x.png" alt="Image" width="170" height="34"> -->
+                                     HB (Hafarb) BuildWorks
                                 </p>
 
-                                <p class="margin-bottom-15">We have over 15 years of experien able to help you 24 hours a day.</p>
+                                <p class="margin-bottom-15">HB (Hafarb) BuildWorks has over 14 years of experience in architecture, design-build, and construction delivery.</p>
 
                                 <ul>
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-map-marker"></span>
-                                            <span class="text">PO BOX 16122 COLLINS STREET <span class="sl">West Victoria, NewYork</span></span>
+                                            <span class="text">The firm operates through HB BuildingWorks Inc. (USA) <span class="sl">Chicago</span></span>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="inner">
                                             <span class="fa fa-phone"></span>
-                                            <span class="text">CALL US : (+61) 3 8376 6284</span>
+                                            <span class="text">CALL US : +1 (773)901-0254</span>
                                         </div>
                                     </li>
 
                                     <li class="margin-top-7">
                                         <div class="inner">
                                             <span class=" font-size-14 fa fa-envelope"></span>
-                                            <span class="text">SUPPORT@NICHE_THEME</span>
+                                            <span class="text">hbworks.ng@gmail.com</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -500,13 +500,13 @@
             <div id="bottom-bar-inner" class="container">
                 <div class="bottom-bar-inner-wrap">
                     <div class="bottom-bar-content">
-                       <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Templates Hub</a></span> 
+                        <div id="copyright">© <span class="text"><a href="https://www.templateshub.net" class="text-accent">Lotus-Gold</a></span> 
                         </div>
                     </div><!-- /.bottom-bar-content -->
 
-                    <div class="bottom-bar-menu">
-                        <!-- <ul class="bottom-nav">
-                            <li class="menu-item">
+                    <!-- <div class="bottom-bar-menu">
+                        <ul class="bottom-nav">
+                            <li class="menu-item current-menu-item">
                                 <a href="index.html">HOME</a>
                             </li>
                             <li class="menu-item">
@@ -515,20 +515,20 @@
                             <li class="menu-item">
                                 <a href="page-services.html">SERVICES</a>
                             </li>
-                            <li class="menu-item current-menu-item">
+                            <li class="menu-item">
                                 <a href="page-projects.html">PROJECTS</a>
                             </li>
                             <li class="menu-item">
                                 <a href="page-testimonial.html">PAGE</a>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item ">
                                 <a href="page-blog.html">BLOG</a>
                             </li>
                             <li class="menu-item">
                                 <a href="page-contact.html">CONTACT</a>
                             </li>
-                        </ul> -->
-                    </div><!-- /.bottom-bar-menu -->
+                        </ul>
+                    </div>/.bottom-bar-menu -->
                 </div><!-- /.bottom-bar-inner-wrap -->                
             </div><!-- /#bottom-bar-inner -->
         </div><!-- /#bottom -->
@@ -572,7 +572,6 @@
 <script src="includes/rev-slider/js/extensions/revolution.extension.video.min.js"></script>
 
 </body>
-
 
 </html>
 
