--- a/page-testimonial.html
+++ b/page-testimonial.html
@@ -81,45 +81,45 @@
                             <span></span>
                         </div><!-- /.mobile-button -->
 
-                        <nav id="main-nav" class="main-nav">
+                         <nav id="main-nav" class="main-nav">
                             <ul id="menu-primary-menu" class="menu">
                                 <li class="menu-item menu-item-has-children current-menu-item">
                                     <a href="index.html">HOME</a>
-                                    <ul class="sub-menu">
-                                        <!-- <li class="menu-item current-item"><a href="index.html">HOME 1</a></li> -->
-                                        <!-- <li class="menu-item"><a href="home-2.html">HOME</a></li> -->
-                                    </ul>
+                                    <!-- <ul class="sub-menu">
+                                        <li class="menu-item current-item"><a href="index.html">HOME 1</a></li>
+                                        <li class="menu-item"><a href="home-2.html">HOME</a></li>
+                                    </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-about.html">ABOUT US </a>
-                                    <ul class="sub-menu">
+                                    <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-about.html">ABOUT US</a></li>
-                                        <!-- <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
+                                        <li class="menu-item"><a href="page-about-detail.html">ABOUT DETAIL</a></li>
                                         <li class="menu-item"><a href="page-about-team.html">ABOUT TEAM</a></li>
-                                        <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-about-careers.html">ABOUT CAREERS</a></li>
+                                    </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-services.html">SERVICES</a>
-                                    <ul class="sub-menu">
-                                        <!-- <li class="menu-item"><a href="page-services.html">SERVICES</a></li> -->
+                                    <!-- <ul class="sub-menu">
+                                        <li class="menu-item"><a href="page-services.html">SERVICES</a></li>
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                <li class="menu-item menu-item-has-children">
                                     <a href="page-projects.html">PROJECTS</a>
-                                    <ul class="sub-menu">
+                                    <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-projects.html">PROJECTS</a></li>
-                                        <!-- <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
-                                        <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-projects-full.html">PROJECTS FULL WIDTH</a></li>
+                                        <li class="menu-item"><a href="page-project-detail.html">PROJECTS DETAIL</a></li>
+                                    </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children" >
                                     <a href="page-testimonial.html">PAGE</a>
-                                    <ul class="sub-menu">
+                                    <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-testimonial.html">PAGE TESTIMONIAL</a></li>
-                                        <!-- <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-pricing.html">PAGE PRICING</a></li>
+                                    </ul> -->
                                 </li>
                                 <!-- <li class="menu-item menu-item-has-children">
                                     <a href="page-blog.html">BLOG</a>
@@ -130,10 +130,10 @@
                                 </li> -->
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-contact.html">CONTACT</a>
-                                    <ul class="sub-menu right-sub-menu">
+                                    <!-- <ul class="sub-menu right-sub-menu">
                                         <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li>
-                                        <!-- <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li> -->
-                                    </ul>
+                                        <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li>
+                                    </ul> -->
                                 </li>
                             </ul>
                         </nav><!-- /#main-nav -->
