--- a/page-testimonial.html
+++ b/page-testimonial.html
@@ -100,7 +100,7 @@
                                     </ul> -->
                                 </li>
                                 <li class="menu-item menu-item-has-children">
-                                    <a href="page-services.html">SERVICES</a>
+                                    <a href="page-services-detail.html">SERVICES</a>
                                     <!-- <ul class="sub-menu">
                                         <li class="menu-item"><a href="page-services.html">SERVICES</a></li>
                                         <li class="menu-item"><a href="page-services-detail.html">SERVICES DETAIL</a></li>
