--- a/page-services-detail.html
+++ b/page-services-detail.html
@@ -130,10 +130,10 @@
                                 </li> -->
                                 <li class="menu-item menu-item-has-children">
                                     <a href="page-contact.html">CONTACT</a>
-                                    <!-- <ul class="sub-menu right-sub-menu">
+                                    <ul class="sub-menu right-sub-menu">
                                         <li class="menu-item"><a href="page-contact.html">CONTACT 1</a></li>
                                         <li class="menu-item"><a href="page-contact-2.html">CONTACT 2</a></li>
-                                    </ul> -->
+                                    </ul>
                                 </li>
                             </ul>
                         </nav><!-- /#main-nav -->
